Estilizando Timeline / Preloading Login

--- a/admin/client/views/login/login.html
+++ b/admin/client/views/login/login.html
@@ -29,28 +29,20 @@
             </div>
 
 
+            <p>
+              <input type="checkbox" class="filled-in" id="filled-in-box" />
+              <label for="filled-in-box">Lembrar</label>
+            </p>
+
+
             <button type="submit" class="btn-submit button button-positive button-block submit active" id="login-btn">
               Entrar
             </button>
 
           </form>
 
-          <div class="password-link padding text-center">
-            <p>
-              Perdeu a senha?
-
-              <a href="#" id="btn-password-recovery" class="btn-register positive">Recuperar</a>
-
-            </p>
-          </div>
-
         </div>
 
-
-        <!-- {{> password }}
-
-
- -->
 
       </div>
 
