--- a/admin/client/views/programs/update.html
+++ b/admin/client/views/programs/update.html
@@ -137,7 +137,7 @@
 
 		      	<div class="input-field col s12">
 					<input id="program_status" type="checkbox" class="validate">
-					<label for="program_status">Ativar</label>
+					<label for="program_status">Status</label>
 				</div>
 
 			      <div class="btn-new col s12">
