--- a/admin/client/stylesheets/style.scss
+++ b/admin/client/stylesheets/style.scss
@@ -20,7 +20,10 @@ body {
 	//	Reset
 	//	====================== /
 
-
+  nav {
+    height:90px;line-height:90px;
+    i {height:90px;line-height:90px;}
+  }
 	//	Layout
 	//	====================== /
 
@@ -32,8 +35,9 @@ body {
 
 			// Logo
 			.brand-logo {
+        height:90px;
 				img {
-					margin: 8px 0.75rem;width: 222px;display:table;
+					margin:29px;
 				}
 			}
 
@@ -49,7 +53,7 @@ body {
 			.menu {
 				li {
 					a {
-						height:64px;line-height:64px;
+						height:90px;line-height:90px;
 						i {float:left;font-size:18px;margin-right:8px;}
 						span {float:left;}
 					}
@@ -61,6 +65,15 @@ body {
 		// Container
 		.top-container {
 			position:relative;margin-top:30px;width:100%;padding-bottom:10px;margin-bottom:20px;border-bottom:1px solid #e5e5e5;
+        h4 {
+          font-size:30px;
+          i {
+              font-size: 38px;
+              color: #2d2d2d;
+              float: left;
+              margin: 2px 14px;
+          }
+        }
 			.btn-model {
 				position:absolute;right:0;top:0;background:none!important;color:#4061A6;box-shadow:none!important;-webkit-box-shadow:none!important;-moz-box-shadow:none!important;padding:0!important;
 			}
@@ -98,10 +111,14 @@ body {
 				}
 
 
+
 				.item-inner {
-					background:none;padding-bottom:0;margin-bottom:0;border-bottom:none;display: block;cursor: pointer;height:auto!important;line-height: 1.5rem!important; padding: 10px 20px;
+					background:none;padding-bottom:0;margin-bottom:0;border-bottom:none;display: block;cursor: pointer;height:auto!important;line-height: 1.5rem!important; padding: 3px 20px 10px 100px;
+
 					img {
-					  width: 60px!important;height: 60px!important;top: 15px!important;float:left;margin-right:20px;border-radius:50%;-webkit-border-radius:50%;
+					  position:absolute;left:25px;top: 22px!important;float:left;margin-right:20px;border-radius:50%;-webkit-border-radius:50%;
+
+            box-shadow:1px 1px 8px -1px rgba(0,0,0,.3);
 					}
 				}
 				.date {font-size:14px;color:#999;}
@@ -341,9 +358,12 @@ body {
 
 	#login-form {
 		  color: #fff!important;
+      position:relative;
 		  border-radius:6px;
 		  margin-top:0;
 		  padding: 0!important;
+      max-width: 460px;
+      margin: 30px auto;
 
 		.item {
 			padding-left:0!important;
@@ -397,18 +417,22 @@ body {
 			  margin-bottom: 6px;
 		}
 		.btn-submit {
-			border-radius:28px;
-			-webkit-border-radius:28px;
-			-moz-border-radius:28px;
+			border-radius:6px;
+			-webkit-border-radius:6px;
+			-moz-border-radius:6px;
 			text-transform: uppercase;
 			background: #4061A6 !important;
 			  letter-spacing: -0.03em;
 			  border: 2px solid #fff;
 			  font-weight:bold;
 			  margin-top: 25px;
-			  font-size: 16px;
-			  width:100%;
-			  padding:6px 0;
+
+            font-size: 16px;
+    padding: 12px 20px;
+    float: right;
+    position: absolute;
+    bottom: -11px;
+    right: -11px;
 
 		}
 
@@ -621,7 +645,7 @@ body {
 }
 
 
-.vehicle {
+.vehicle, .programs {
   .card-content {
     position:relative;
     strong {font-size:22px;font-weight:300!important;}
@@ -644,4 +668,19 @@ border-top-left-radius: 10px;
 
 .input-field input[type=text].valid, .input-field input[type=password].valid, .input-field input[type=email].valid, .input-field input[type=url].valid, .input-field input[type=date].valid, .input-field input[type=tel].valid, .input-field input[type=number].valid, .input-field input[type=search].valid, .input-field textarea.materialize-textarea.valid {
     color:#4061A6;
+}
+.loading-message {
+  color:#999;font-size:16px;
+}
+
+.spinner-spiral {
+  stroke: #999;
+  fill: #999;
+
+  width:40px;height:40px;
+  display:table;margin:0 auto;
+}
+
+.pg-loading-screen .pg-loading-logo-header img {
+  max-width:240px;
 }
