--- a/admin/client/views/index/index.html
+++ b/admin/client/views/index/index.html
@@ -5,6 +5,7 @@
 	<header class="top-container">
 
 		<h4>
+      <i class="mdi-communication-message"></i>
 			O que estão enviando?
 		</h4>
 
@@ -21,62 +22,75 @@
 			<div class="col s12">
 
 				<div class="collection" data-collapsible="accordion">
-				{{#each contents}}
-					<div class="collection-item avatar">
+				<!-- {{#each contents}} -->
 
-		  			<div class="secondary-content actions-icons">
+          <div class="collection-item avatar">
 
-						  	<a id="btnDelete" href="#" class="modal-trigger">
-						  		<input type="text" value="{{_id}}" id="programDelete" readonly="readonly" style="display:none;" />
-						  		<i class="mdi-navigation-close"></i>
-						  	</a>
-					  </div>
+            <div class="secondary-content actions-icons">
 
-					  <div id="visualizeMensageHistory" class="item-inner collapsible-header">
+                <a id="btnDelete" href="#" class="modal-trigger">
+                  <!-- <input type="text" value="{{_id}}" id="programDelete" readonly="readonly" style="display:none;" /> -->
+                  <input type="text" value="" id="programDelete" readonly="readonly" style="display:none;" />
+                  <i class="mdi-navigation-close"></i>
+                </a>
+            </div>
 
-					  	  <input type="text" id="mensageHistoryId" style="display:none" value="{{_id}}">
-  						  <strong class="title">{{user_name}}</strong>
-  						  <p class="date">Enviado há {{timeCompared}}</p>
+            <div id="visualizeMensageHistory" class="item-inner collapsible-header">
 
-					  </div>
+                <input type="text" id="mensageHistoryId" style="display:none" value="{{_id}}">
+                <!-- <strong class="title">{{user_name}}</strong> -->
+                <figure class="avatar">
+                  <img src="/images/avatar1.png" height="80" width="80" />
+                </figure>
+                <strong class="title">Allan Alexandre</strong>
+                <!-- <p class="date">Enviado há {{timeCompared}}</p> -->
+                <p class="date">Enviado há 2m</p>
 
-					  <div class="collection-message card collapsible-body">
-					  	{{#if img}}
-					        <div class="card-image waves-effect waves-block waves-light">
-					          <img class="activator" src="{{img}}">
-					        </div>
-					        <div class="card-content">
-					          <span class="card-title activator grey-text">
-						          {{user_name}}
-						          <i class="mdi-action-info right"></i>
-					          </span>
-					        </div>
-					        <div class="card-reveal">
-					          <span class="card-title grey-text">
-					          	{{user_name}}
-					          	<i class="mdi-navigation-close right"></i>
-					          </span>
+            </div>
 
-					          <p class="card-message">
-			          			{{text}}
-					          </p>
+            <div class="collection-message card collapsible-body">
+              <!-- {{#if img}} -->
+                  <div class="card-image waves-effect waves-block waves-light">
+                    <!-- <img class="activator" src="{{img}}"> -->
+                    <img class="activator" src="/images/img1.png" width="100%">
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title activator grey-text">
+                      <!-- {{user_name}} -->
+                      Allan Alexandre
+                      <i class="mdi-action-info right"></i>
+                    </span>
+                  </div>
+                  <div class="card-reveal">
+                    <span class="card-title grey-text">
+                      <!-- {{user_name}} -->
+                      Alisson Alexandre
+                      <i class="mdi-navigation-close right"></i>
+                    </span>
 
-					        </div>
-				        {{else}}
-				        	<div class="card-image waves-effect waves-block waves-light">
-					          {{text}}
-					        </div>
-				        	<div class="card-content">
-					          <span class="card-title activator grey-text">
-						          {{user_name}}
-						          <i class="mdi-action-info right"></i>
-					          </span>
-					        </div>
-				        {{/if}}
-				      </div>
+                    <p class="card-message">
+                      <!-- {{text}} -->
+                      Texto
+                    </p>
 
-					</div>
-					{{/each }}
+                  </div>
+                <!-- {{else}} -->
+                  <!-- <div class="card-image waves-effect waves-block waves-light"> -->
+                    <!-- {{text}} -->
+                    <!-- Texto -->
+                  <!-- </div> -->
+                  <!-- <div class="card-content"> -->
+                    <!-- <span class="card-title activator grey-text"> -->
+                      <!-- {{user_name}} -->
+                      <!-- Allan Alexandre -->
+                      <!-- <i class="mdi-action-info right"></i> -->
+                    <!-- </span> -->
+                  <!-- </div> -->
+                <!-- {{/if}} -->
+              </div>
+
+          </div>
+					<!-- {{/each }} -->
 
 				</div>
 					<a id="mais" class="waves-effect waves-light btn btn-more color-pattern">
