--- a/admin/client/views/programs/programs.html
+++ b/admin/client/views/programs/programs.html
@@ -24,7 +24,7 @@
 
 						<div class="program card">
 				            <div class="card-image">
-				              <img src="{{image_avatar}}" width="100%" height="250">
+				              <img src="{{image_avatar}}" width="100%" height="300">
 
 				             <div class="secondary-content actions-icons">
       							  	<a href="{{pathFor 'programUpdate' _id=this._id}}">
@@ -38,8 +38,9 @@
 
 				            </div>
 				            <div class="card-content">
-				              	<strong class="card-title">{{name}} -  {{status}}</strong>
-				            </div>
+                        <strong>{{name}}</strong>
+                        <span>{{status}}</span>
+                    </div>
 			      </div>
 
 			    </div>
