--- a/admin/client/views/index/loading.scss
+++ b/admin/client/views/index/loading.scss
@@ -1,8 +1,6 @@
 .loading-message {
-  color: #fff;
-  font-size: 25px;
   font-weight: 300;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .sk-spinner-rotating-plane.sk-spinner {
