--- a/admin/client/views/header/header.html
+++ b/admin/client/views/header/header.html
@@ -3,7 +3,7 @@
  <nav>
     <div class="nav-wrapper">
       <a href="{{pathFor 'index' }}" class="brand-logo">
-      	<img src="/images/logo-wide.png" />
+      	<img src="/images/logo-original.png" height="52" />
       </a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 
