--- a/admin/client/views/index/index.html
+++ b/admin/client/views/index/index.html
@@ -5,7 +5,6 @@
 	<header class="top-container">
 
 		<h4>
-      <i class="mdi-communication-message"></i>
 			O que estão enviando?
 		</h4>
 
@@ -22,75 +21,52 @@
 			<div class="col s12">
 
 				<div class="collection" data-collapsible="accordion">
-				<!-- {{#each contents}} -->
+				{{#each contents}}
 
           <div class="collection-item avatar">
 
             <div class="secondary-content actions-icons">
 
                 <a id="btnDelete" href="#" class="modal-trigger">
-                  <!-- <input type="text" value="{{_id}}" id="programDelete" readonly="readonly" style="display:none;" /> -->
-                  <input type="text" value="" id="programDelete" readonly="readonly" style="display:none;" />
+                  <input type="text" value="{{_id}}" id="programDelete" readonly="readonly" style="display:none;" />
                   <i class="mdi-navigation-close"></i>
                 </a>
+
             </div>
 
             <div id="visualizeMensageHistory" class="item-inner collapsible-header">
 
                 <input type="text" id="mensageHistoryId" style="display:none" value="{{_id}}">
-                <!-- <strong class="title">{{user_name}}</strong> -->
+
                 <figure class="avatar">
-                  <img src="/images/avatar1.png" height="80" width="80" />
+                  <img src="{{user_avatar}}" height="80" width="80" />
                 </figure>
-                <strong class="title">Allan Alexandre</strong>
-                <!-- <p class="date">Enviado há {{timeCompared}}</p> -->
-                <p class="date">Enviado há 2m</p>
+
+                <strong class="title">{{user_name}}</strong>
+                <p class="date">Enviado há {{timeCompared}}</p>
 
             </div>
 
             <div class="collection-message card collapsible-body">
-              <!-- {{#if img}} -->
-                  <div class="card-image waves-effect waves-block waves-light">
-                    <!-- <img class="activator" src="{{img}}"> -->
-                    <img class="activator" src="/images/img1.png" width="100%">
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title activator grey-text">
-                      <!-- {{user_name}} -->
-                      Allan Alexandre
-                      <i class="mdi-action-info right"></i>
-                    </span>
-                  </div>
-                  <div class="card-reveal">
-                    <span class="card-title grey-text">
-                      <!-- {{user_name}} -->
-                      Alisson Alexandre
-                      <i class="mdi-navigation-close right"></i>
-                    </span>
 
-                    <p class="card-message">
-                      <!-- {{text}} -->
-                      Texto
-                    </p>
+                  {{#if img}}
+                    <div class="card-image">
 
-                  </div>
-                <!-- {{else}} -->
-                  <!-- <div class="card-image waves-effect waves-block waves-light"> -->
-                    <!-- {{text}} -->
-                    <!-- Texto -->
-                  <!-- </div> -->
-                  <!-- <div class="card-content"> -->
-                    <!-- <span class="card-title activator grey-text"> -->
-                      <!-- {{user_name}} -->
-                      <!-- Allan Alexandre -->
-                      <!-- <i class="mdi-action-info right"></i> -->
-                    <!-- </span> -->
-                  <!-- </div> -->
-                <!-- {{/if}} -->
+                      <p>{{text}}</p>
+
+                      <img class="activator" src="{{img}}">
+
+                    </div>
+                  {{else}}
+                    <div class="card-image">
+                      <p>{{text}}</p>
+                    </div>
+                  {{/if}}
+
               </div>
 
           </div>
-					<!-- {{/each }} -->
+					{{/each }}
 
 				</div>
 					<a id="mais" class="waves-effect waves-light btn btn-more color-pattern">
@@ -100,14 +76,6 @@
 			</div>
 
 		</div>
-
-
-		  <!-- Modal Structure -->
-		  <div id="lista-usuarios" class="modal">
-		    <div class="modal-content">
-		      <h4>Lista de usuários</h4>
-		    </div>
-		  </div>
 
 	</div>
 
