--- a/admin/client/views/programs/new.html
+++ b/admin/client/views/programs/new.html
@@ -69,32 +69,32 @@
     						<i class="mdi-notification-event-note prefix"></i>
                 <div class="box">
                   <p>
-                    <input type="checkbox" class="filled-in" id="segunda" />
-                    <label for="segunda">Segunda</label>
+                    <input type="checkbox" class="filled-in" id="day_monday" />
+                    <label for="day_monday">Segunda</label>
                   </p>
                   <p>
-                    <input type="checkbox" class="filled-in" id="terca"  />
-                    <label for="terca">Terça</label>
+                    <input type="checkbox" class="filled-in" id="day_tuesday"  />
+                    <label for="day_tuesday">Terça</label>
                   </p>
                   <p>
-                    <input type="checkbox" class="filled-in" id="quarta"  />
-                    <label for="quarta">Quarta</label>
+                    <input type="checkbox" class="filled-in" id="day_wednesday"  />
+                    <label for="day_wednesday">Quarta</label>
                   </p>
                   <p>
-                    <input type="checkbox" class="filled-in" id="quinta"  />
-                    <label for="quinta">Quinta</label>
+                    <input type="checkbox" class="filled-in" id="day_thursday"  />
+                    <label for="day_thursday">Quinta</label>
                   </p>
                   <p>
-                    <input type="checkbox" class="filled-in" id="sexta"  />
-                    <label for="sexta">Sexta</label>
+                    <input type="checkbox" class="filled-in" id="day_friday"  />
+                    <label for="day_friday">Sexta</label>
                   </p>
                   <p>
-                    <input type="checkbox" class="filled-in" id="sabado"  />
-                    <label for="sabado">Sábado</label>
+                    <input type="checkbox" class="filled-in" id="day_saturday"  />
+                    <label for="day_saturday">Sábado</label>
                   </p>
                   <p>
-                    <input type="checkbox" class="filled-in" id="domingo"  />
-                    <label for="domingo">Domingo</label>
+                    <input type="checkbox" class="filled-in" id="day_sunday"  />
+                    <label for="day_sunday">Domingo</label>
                   </p>
                 </div>
     					</div>
