--- a/admin/client/views/vehicle/update.html
+++ b/admin/client/views/vehicle/update.html
@@ -34,6 +34,12 @@
 			        <label for="vehicle_description" id="vehicle_label_description">Descrição</label>
 			      </div>
 
+			      <div class="input-field col s12">
+			      	<i class="mdi-action-account-circle prefix" id="vehicle_img_feedurl"></i>
+			        <input id="feedurl" type="text" class="validate" maxlength="600">
+			        <label for="feedurl" id="vehicle_label_feedurl">Url WebService</label>
+			      </div>
+
 			       <div class="col file s6">
 			       	<small>Dimensões ( 300x300 ) *</small>
 		      		<div class="file-field input-field">
