--- a/admin/client/views/programs/new.html
+++ b/admin/client/views/programs/new.html
@@ -36,6 +36,13 @@
 					  </select>
 			    </div>
 
+          <div class="col s12">
+             <label>Cidade *</label>
+            <select id="program_city">
+              <option value="" disabled selected>Escolha a cidade</option>
+            </select>
+          </div>
+
 			      <div class="input-field col s12">
 			      	<i class="mdi-action-account-circle prefix"></i>
 			        <input id="program_name" type="text" class="validate" maxlength="200">
