--- a/admin/client/views/city/update.html
+++ b/admin/client/views/city/update.html
@@ -27,6 +27,23 @@
 			        <input id="city_name" type="text" class="validate" maxlength="200">
 			        <label for="city_name" id="city_label_name">name *</label>
 			      </div>
+			      <div class="file s12">
+	                  <div class="col s6">
+
+	                    <small>Dimensões ( 300x120 ) *</small>
+	                    <div class="file-field input-field">
+	                      <input class="file-path validate hide" type="text"/>
+	                      <div class="btn color-pattern btn-submit-white">
+	                            <span>Imagem</span>
+	                            <input type="file" id="topo_upload" name="imageFile" />
+	                        </div>
+	                        <div class="img-upload">
+	                            <img src="{{imgBase64_topo}}" id="topo_imgBase64" width="100" height="45">
+	                          </div>
+	                      </div>
+
+	                  </div>
+                  </div>
 
 	  		      	<div class="input-field col s12">
 						<input id="city_status" type="checkbox" class="validate">
