Alteracoes de estilo

--- a/client/views/category/category.html
+++ b/client/views/category/category.html
@@ -4,7 +4,7 @@
 {{#if admin}}
 	<header class="top-container">
 		<h4>
-			Categoria
+			Categorias
 		</h4>
 
 		<a href="{{pathFor 'categoryNew' }}" class="waves-effect waves-light btn btn-add">
