--- a/client/views/city/city.html
+++ b/client/views/city/city.html
@@ -4,7 +4,7 @@
 {{#if admin}}
 	<header class="top-container">
 		<h4>
-			Cidade
+			Localidades
 		</h4>
 
 		<a href="{{pathFor 'cityNew' }}" class="waves-effect waves-light btn btn-add">
