--- a/client/views/vehicle/vehicle.html
+++ b/client/views/vehicle/vehicle.html
@@ -4,7 +4,7 @@
 {{#if admin}}
 	<header class="top-container">
 		<h4>
-			Veiculo
+			Veículos
 		</h4>
 
 		<a href="{{pathFor 'vehicleNew' }}" class="waves-effect waves-light btn btn-add">
