--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -21,8 +21,12 @@ body {
 	//	====================== /
 
   nav {
-    height:90px;line-height:90px;
-    i {height:90px;line-height:90px;}
+    height:205px;line-height:205px;
+    i {height: 42px;
+    float: left;
+    line-height: 42px;
+    font-size: 22px;
+    margin-right: 10px;}
   }
 	//	Layout
 	//	====================== /
@@ -35,9 +39,15 @@ body {
 
 			// Logo
 			.brand-logo {
-        height:90px;
+            display: table;
+          font-size: 0;
+          padding: 0;
+          margin: 0 auto;
+          height: 162px;
+          position:relative;
 				img {
-					margin:19px;
+					    display: table;
+    margin-top: 46px;
 				}
 			}
 
@@ -46,15 +56,15 @@ body {
 				li {
 					  a {
 						  height: 42px!important;
-	  					  line-height: 60px!important;
+	  					  line-height: 42px!important;
 	  				  }
 				}
 			}
 			.menu {
+        display: table;margin: 0 auto;
 				li {
 					a {
-						height:90px;line-height:90px;
-						i {float:left;font-size:18px;margin-right:8px;}
+						height:42px;line-height:42px;float:left;font-weight:300!important;
 						span {float:left;}
 					}
 				}
@@ -422,9 +432,8 @@ body {
 			-moz-border-radius:6px;
 			text-transform: uppercase;
 			background: #4061A6 !important;
-			  letter-spacing: -0.03em;
 			  border: 2px solid #fff;
-			  font-weight:bold;
+			  font-weight:400;
 			  margin-top: 25px;
 
             font-size: 16px;
@@ -693,3 +702,10 @@ border-top-left-radius: 10px;
 .pg-loading-screen .pg-loading-logo-header img {
   max-width:240px;
 }
+
+
+.uil-default-css {
+  display:table;margin:20px auto;
+}
+
+@-webkit-keyframes uil-default-anim { 0% { opacity: 1} 100% {opacity: 0} }@keyframes uil-default-anim { 0% { opacity: 1} 100% {opacity: 0} }.uil-default-css > div:nth-of-type(1){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.5s;animation-delay: -0.5s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(2){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.4166666666666667s;animation-delay: -0.4166666666666667s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(3){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.33333333333333337s;animation-delay: -0.33333333333333337s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(4){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.25s;animation-delay: -0.25s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(5){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.16666666666666669s;animation-delay: -0.16666666666666669s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(6){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: -0.08333333333333331s;animation-delay: -0.08333333333333331s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(7){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: 0s;animation-delay: 0s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(8){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: 0.08333333333333337s;animation-delay: 0.08333333333333337s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(9){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: 0.16666666666666663s;animation-delay: 0.16666666666666663s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(10){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: 0.25s;animation-delay: 0.25s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(11){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: 0.33333333333333337s;animation-delay: 0.33333333333333337s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}.uil-default-css > div:nth-of-type(12){-webkit-animation: uil-default-anim 1s linear infinite;animation: uil-default-anim 1s linear infinite;-webkit-animation-delay: 0.41666666666666663s;animation-delay: 0.41666666666666663s;}.uil-default-css { position: relative;background:none;width:200px;height:200px;}
