--- a/client/views/musiclist/musiclist.html
+++ b/client/views/musiclist/musiclist.html
@@ -2,6 +2,19 @@
 
 <div class="container">
 
+  <header class="top-container">
+    <h4>
+      Pedidos de música
+    </h4>
+
+    <a href="{{pathFor 'cityNew' }}" class="waves-effect waves-light btn btn-add">
+      <i class="mdi-content-add left"></i>
+      NOVO
+    </a>
+
+  </header>
+
+
 	<div class="content-container row">
 
 		<div class="timeline">
