--- a/client/views/index/index.html
+++ b/client/views/index/index.html
@@ -5,7 +5,7 @@
 	<header class="top-container">
 
 		<h4>
-			O que estão enviando?
+			Timeline
 		</h4>
 
 		  <span class="waves-effect waves-light btn btn-model">
@@ -25,21 +25,21 @@
 
           <div class="collection-item avatar">
 
-            <div class="secondary-content actions-icons">
+           <!--  <div class="secondary-content actions-icons">
 
                 <a id="btnDelete" href="#" class="modal-trigger">
                   <input type="text" value="{{_id}}" id="programDelete" readonly="readonly" style="display:none;" />
                   <i class="mdi-navigation-close"></i>
                 </a>
 
-            </div>
+            </div> -->
 
             <div id="visualizeMensageHistory" class="item-inner collapsible-header">
 
                 <input type="text" id="mensageHistoryId" style="display:none" value="{{_id}}">
 
                 <figure class="avatar">
-                  <img src="{{user_avatar}}" height="80" width="80" />
+                  <img src="{{user_avatar}}" height="50" width="50" />
                 </figure>
 
                 <strong class="title">{{user_name}}</strong>
