--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -46,8 +46,8 @@ body {
           height: 162px;
           position:relative;
 				img {
-					    display: table;
-    margin-top: 46px;
+					  display: table;
+            margin-top: 15px;
 				}
 			}
 
@@ -62,7 +62,20 @@ body {
 			}
 			.menu {
         display: table;margin: 0 auto;
+
+        background:rgba(0,0,0,.1);
+
+        border-radius: 6px 6px 0 0;
+        -moz-border-radius: 6px 6px 0 0;
+        -webkit-border-radius: 6px 6px 0 0;
+
 				li {
+          &:first-child {
+            border-radius:6px 0 0 0;
+          }
+          &:last-child {
+            border-radius:0 0 6px 0;
+          }
 					a {
 						height:42px;line-height:42px;float:left;font-weight:300!important;
 						span {float:left;}
@@ -101,20 +114,27 @@ body {
 	// Timeline
 	.timeline {
 		.collection {
+      background:transparent!important;border:0 none!important;
+
+      .collapsible-body {
+        display: block;
+        p {
+          padding:0!important;
+          font-size: 18px;
+          color: #666;
+        }
+      }
 
 			.card-image {
 				padding:22px;
+        img {
+          margin-top:15px!important;display:block;
+        }
 			}
 
 			// Elements
 			.collection-item {
-				height:auto;cursor:pointer;padding-top:25px;padding-bottom:25px;padding-left:25px!important;
-
-				// Transition
-				-webkit-transition: background .3s linear;
-				-moz-transition: background .3s linear;
-				-o-transition: background .3s linear;
-				transition: background .3s linear;
+				height:auto;cursor:pointer;background:transparent;padding:10px 5px 25px 5px!important;margin-bottom:15px;
 
 				&:hover {
 					background:#f9f9f9;
@@ -123,7 +143,7 @@ body {
 
 
 				.item-inner {
-					background:none;padding-bottom:0;margin-bottom:0;border-bottom:none;display: block;cursor: pointer;height:auto!important;line-height: 1.5rem!important; padding: 3px 20px 10px 100px;
+					background:none;padding-bottom:0;margin-bottom:0;border-bottom:none;display: block;cursor: pointer;height:auto!important;line-height: 1.5rem!important; padding: 3px 20px 10px 90px;
 
 					img {
 					  position:absolute;left:25px;top: 22px!important;float:left;margin-right:20px;border-radius:50%;-webkit-border-radius:50%;
@@ -637,9 +657,9 @@ body {
   .actions-icons {
         position: absolute;
     right: 0;
-    top: 10px;
+    top: 15px;
     i {
-      font-size:30px;
+      font-size:20px;
     }
     a {
       float:left;display:block;color:#999;
