--- a/client/views/programs/update.html
+++ b/client/views/programs/update.html
@@ -37,7 +37,7 @@
 			    </div>
 
           <div class="col s12">
-             <label>Cidade *</label>
+             <label>Localidade *</label>
             <select id="program_city">
               <option value="" disabled selected>Escolha a cidade</option>
             </select>
