--- a/client/views/vehicle/vehicle.html
+++ b/client/views/vehicle/vehicle.html
@@ -24,7 +24,7 @@
 
 						<div class="program card">
 				            <div class="card-image">
-				              <img src="{{image_avatar}}" width="100%" height="300">
+				              <img src="{{image_avatar}}" width="100%">
 
 				             <div class="secondary-content actions-icons">
 										  	<a href="{{pathFor 'vehicleUpdate' _id=this._id}}">
