Adicionado a mascara no telefone do usuario

--- a/client/views/users/new.html
+++ b/client/views/users/new.html
@@ -30,6 +30,11 @@
 				</div>
 
 				<div class="input-field col s12">
+					<input id="user_phone" type="text" class="validate" maxlength="13" data-vm-mask-phone>
+					<label for="user_phone">Telefone *</label>
+				</div>
+
+				<div class="input-field col s12">
 					<input id="user_email" type="text" class="validate" maxlength="200">
 					<label for="user_email">Email *</label>
 				</div>
